Fixed button text wrapping

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -136,8 +136,9 @@ li {
 
 footer {
   text-align: center;
-  background-color: lightgray;
+  background-color: white;
   color: white;
   padding: 20px;
   margin-top: 2%;
+  margin-bottom: 0;
 }
